
  * gpg: New option --no-compress as alias for -z0.

  * gpgsm: Support ECC certificates.  [T6253]

  * gpgsm: Print PROGRESS status lines.  Add new --input-size-hint.
    [T6534]

  * gpgsm: Also announce AES256-CBC in signatures.  [rGaa397fdcdb21]

  * gpgsm: Major rewrite of the PKCS#12 parser.  [T6536]

  * dirmngr: New option --ignore-crl-extensions.  [T6545]

  * wkd: Use export-clean for gpg-wks-client's --mirror and --create
    commands.  [rG505e770b4c]

  * wkd: Make --add-revocs the default in gpg-wks-client.  New option
    --no-add-revocs.  [rG67d57fae3f]


  Release-info: https://dev.gnupg.org/T6307


Noteworthy changes in version 2.2.41 (2022-12-09)
-------------------------------------------------

  * gpg: Add a notation to encryption subkeys in de-vs mode.  [T6279]

  * gpg: Fix trusted introducer for mbox only user-ids.  [T6238]

  * gpg: Report an error via status-fd for receiving a key from the
    agent.  [T5151]

  * gpg: Make --require-compliance work without the --status-fd
    option.  [r11f3232716]

  * gpg: Improve signature verification speed by a factor of more than
    four.  Double detached signing speed.  [T5826]

  * gpg: New --export-filter export-revocs.  [rGedbe30c152]

  * gpg: Import stray revocation certificates to improve WKD
    usability.  [rGbd825ead36af]

  * wkd: New option --add-revocs for gpg-wks-client.  [rG2f4492f3be]

  * wkd: Ignore expired user-ids in gpg-wks-client.  [T6292]

  * scd: Support the Telesec Signature Card v2.0.  [T6252]

  * Fix build regression depending on libgpg-error version.  [T6244]

  Release-info: https://dev.gnupg.org/T6280


Noteworthy changes in version 2.2.40 (2022-10-10)
-------------------------------------------------

  * gpg: Do not consider unknown public keys as non-compliant while
    decrypting.  [T6205]

  * gpg: Avoid to emit a compliance mode line if Libgcrypt is
    non-compliant.  [T6221]

  * gpg: In de-vs mode use AES-128 instead of 3-DES as implicit